--- a/views/members/login.html
+++ b/views/members/login.html
@@ -4,78 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
-    <style>
-        .login-page,
-        .register-page {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        height: 100vh;
-        justify-content: center;
-        }
-
-        .form-control {
-            display: block;
-            width: 100%;
-            height: calc(2.25rem + 2px);
-            padding: .375rem .75rem;
-            font-size: 1rem;
-            font-weight: 400;
-            line-height: 1.5;
-            color: #495057;
-            background-color: #fff;
-            background-clip: padding-box;
-            border: 1px solid #ced4da;
-            border-radius: .25rem;
-            box-shadow: inset 0 0 0 transparent;
-            transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
-        }
-
-        .input-group {
-            position: relative;
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-            -ms-flex-align: stretch;
-            align-items: stretch;
-            width: 100%
-        }
-
-        .input-group-text {
-            display: -ms-flexbox;
-            display: flex;
-            -ms-flex-align: center;
-            align-items: center;
-            padding: .375rem .75rem;
-            margin-bottom: 0;
-            font-size: 1rem;
-            font-weight: 400;
-            line-height: 1.5;
-            color: #495057;
-            text-align: center;
-            white-space: nowrap;
-            background-color: #e9ecef;
-            border: 1px solid #ced4da;
-            border-radius: .25rem
-        }
-        li:nth-child(2)::before {
-            content: "";
-            float: left;
-            width: 1px;
-            height: 10px;
-            margin: 4px 10px;
-            background-color: rgba(0, 0, 0, .08);
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="/style/member.css">
 </head>
 
 <body class="login-page" style="min-height: 496.781px;">
 <div class="login-logo">
-    <a href="/"><b></b></a>
+    <a href="/"><b>아쿠팜</b></a>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
@@ -114,7 +51,7 @@
 
                 <ul style="float: right; list-style-type: none;">
                     <li style="float: left;">
-                        <a href="/register" class="text-center">회원가입</a>
+                        <a href="/members/register" class="text-center">회원가입</a>
                     </li>
                     <li style="float: left;">
                         <a href="register.html" class="text-center">비밀번호 분실</a>
@@ -126,15 +63,9 @@
         <!-- /.login-card-body -->
     </div>
 </div>
-<script src="js/cookieCheck.js"></script>
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<!-- <script th:inline="javascript">
-    var msg = [[${msg}]];
-    if (msg != null) alert(msg);
-</script> -->
 </body>
 </html>
 </html>
