--- a/views/members/register.html
+++ b/views/members/register.html
@@ -3,18 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>모여봐요 소통의 숲</title>
-    <link rel="stylesheet" href="css/domain.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" />
+    <title>아쿠팜</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="/style/member.css">
     <style>
-        li:nth-child(2)::before {
-            content: "";
-            float: left;
-            width: 1px;
-            height: 10px;
-            margin: 4px 10px;
-            background-color: rgba(0, 0, 0, .08);
-        }
         .mb-3 {
             margin: 0 0 0.5rem !important;
         }
@@ -27,7 +21,7 @@
 
 <body class="login-page">
 <div class="login-logo">
-    <a href="/"><b>소통의 숲</b></a>
+    <a href="/"><b>아쿠팜</b></a>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
@@ -36,7 +30,7 @@
             <form action="register" name="userRegister" method="post">
                 <div class="mb-3">
                     <div class="input-group">
-                        <input type="email" name="email" id="email" class="form-control" placeholder="이메일">
+                        <input type="text" name="email" id="email" class="form-control" placeholder="아이디">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -71,7 +65,7 @@
                 </div>
                 <!-- /.col -->
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="validation()">회원가입</button>
+                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="">회원가입</button>
                 </div>
             </form>
 
@@ -92,10 +86,8 @@
 </div>
 
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/duplicate.js"></script>
-<script th:inline="javascript">
-    var msg = [[${msg}]];
-    if (msg != null) alert(msg);
-</script>
 </body>
 </html>
