--- a/views/members/login.html
+++ b/views/members/login.html
@@ -20,19 +20,16 @@
         <div class="card-body login-card-body">
             <form action="/session_login" method="post">
                 <div class="input-group mb-3">
-                    <input type="email" id="email" name="email" class="form-control" placeholder="이메일">
+                    <input type="text" id="uid" name="uid" class="form-control" placeholder="아이디">
                     <div class="input-group-append">
-                        <div class="input-group-text">
-                            <span class="fas fa-envelope"></span>
-                        </div>
                     </div>
                 </div>
                 <div class="input-group mb-3">
-                    <input type="password" name="pw" class="form-control" placeholder="비밀번호">
+                    <input type="password" id="upw" name="upw" class="form-control" placeholder="비밀번호">
                     <div class="input-group-append">
-                        <div class="input-group-text">
+                        <!-- <div class="input-group-text">
                             <span class="fas fa-lock"></span>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <div class="mb-3">
