--- a/views/index.html
+++ b/views/index.html
@@ -83,7 +83,7 @@
                 </div>
             </div>
 
-            <a href="#" class="nav_link"> <i class='bx bx-log-out nav_icon'></i>
+            <a href="/session_logout" class="nav_link"> <i class='bx bx-log-out nav_icon'></i>
                 <span class="nav_name">SignOut</span>
             </a>
         </nav>
