--- a/views/members/login.html
+++ b/views/members/login.html
@@ -35,7 +35,7 @@
                 <div class="mb-3">
                     <div class="icheck-primary">
                         <input type="checkbox" id="cookie" name="cookie">
-                        <label for="cookie" style="font-weight: 450">이메일 정보 저장</label>
+                        <label for="cookie" style="font-weight: 450">아이디 저장</label>
                     </div>
                 </div>
                 <!-- /.col -->
@@ -48,7 +48,7 @@
 
                 <ul style="float: right; list-style-type: none;">
                     <li style="float: left;">
-                        <a href="/members/register" class="text-center">회원가입</a>
+                        <a href="/register" class="text-center">회원가입</a>
                     </li>
                     <li style="float: left;">
                         <a href="register.html" class="text-center">비밀번호 분실</a>
