--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AQUAPONICS</title>
 
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+    <link rel="stylesheet" href="style/vertical_slider.css">
 </head>
 
 
@@ -17,53 +18,54 @@
     <header class="header" id="header">
         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
 
-        <div class="container-fluid">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Dropdown link
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+
+            <nav class="navbar navbar-expand navbar-collapse navbar-light bg-light">
+                <!-- <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Features</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Pricing</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Dropdown link
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
+                </ul> -->
                 <!-- <form class="d-flex">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
                 </form> -->
-                <ui class="navbar-nav ml-auto">
-                    <li class="nav-link">
+                <a href="/" class="nav-link"><img src="imgs/aqufarm.png" style="height: 45px; padding: 0.5rem; margin-left: 0.5rem;"></a>
+                <ui class="navbar-nav" style="margin-left: auto;">
+                    <li class="navbar-text" style="padding: 0.5rem;">
                         <span id="level">학생용</span>
                     </li>
-                    <li class="nav-link">
-                        <span id="username">홍길동</span>
+                    <li class="navbar-text" style="color: black; padding: 0.5rem;">
+                        <span class="" id="username">홍길동</span>
                     </li>
+                    <!-- <li class="nav-link">
+                        <a href="#" onclick="javascript:logout()" style="color: rgba(var(--bs-emphasis-color-rgb), 0.65);"> <i class='bx bx-log-out nav_icon'></i></a>
+                    </li> -->
                 </ui>
             </nav>
-        </div>
     </header>
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo">
-                    <i class='bx bx-layer nav_logo-icon'></i>
-                    <span class="fas-3 bi_house">b</span>
+                <a href="#" class="nav_logo" style="padding-left: 22px;">
+                    <i ><img src="imgs/am_h20.png" width="24px;"></i>
+                    <span class="fas-3 bi_house" style="color: aliceblue;">아쿠팜</span>
                 </a>
                 <div class="nav_list">
                     <a href="#" class="nav_link active">
@@ -99,6 +101,9 @@
 
     <div class="height-100 bg-light">
         <h4>Main Components</h4>
+        <div class="wrapper">
+            <input type="range" min="0" max="100" value="50" disabled/>
+        </div>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
@@ -116,19 +121,22 @@
             document.body.appendChild(f);
             f.submit();
         }
-
-        window.onload = function() {
+        
+        $(document).ready(function() {
             $.ajax({
             url: "/session",
-            method: "post",
+            method: "get",
             success:function(data) {
-                if (data[0].auth == false) location.replace('/login');
+                if (data[0].auth == false) {
+                    alert("로그인 후 이용해주세요.");
+                    location.replace('/login');
+                }
                 else {
                     console.log(data)
                 }
             }
             })
-        }
+        })
         
     </script>
 </body>
