--- a/views/members/forgot_id.html
+++ b/views/members/forgot_id.html
@@ -10,18 +10,22 @@
     <link rel="stylesheet" href="/style/member.css">
     <style>
         .mb-3 {
-            margin: 0 0 0.5rem !important;
+            margin: 0 0 1.2rem !important;
         }
         label {
             margin-top: 5px;
             padding-left: 0.5rem;
+        }
+        .login-page {
+            min-height: 870px;
+            min-width: 372px;
         }
     </style>
 </head>
 
 <body class="login-page">
 <div class="login-logo">
-    <b>아쿠팜</b>
+    <b>아이디 찾기</b>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
@@ -37,14 +41,14 @@
                             <option value="1">교사</option>
                         </select>
                     </div>
-                    <label id="lLevel"></label>
+                    <label id="lLevel" style="color: red;" hidden>선택하세요.</label>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
                         <input type="text" name="school" id="school" class="form-control" placeholder="학교명">
                         <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#schoolSerch">검색</button>
                     </div>
-                    <label id="lSchool"></label>
+                    <label id="lSchool" style="color: red;" hidden>학교명을 입력하세요.</label>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
@@ -52,7 +56,23 @@
                         <div class="input-group-append">
                         </div>
                     </div>
-                    <label id="lUname"></label>
+                    <label id="lUname" style="color: red;" hidden>이름을 입력하세요.</label>
+                </div>
+                <div class="mb-3">
+                    <div class="input-group">
+                        <input type="text" name="grade" id="grade" class="form-control" placeholder="학년" pattern="[0-9]{1}" title="1에서 9까지 숫자만 입력가능합니다.">
+                        <div class="input-group-append">
+                        </div>
+                    </div>
+                    <label id="lUgrade" style="color: red;" hidden>학년을 입력하세요.</label>
+                </div>
+                <div class="mb-3">
+                    <div class="input-group">
+                        <input type="text" name="class" id="class" class="form-control" placeholder="반" pattern="[0-9]{1,2}" title="1에서 99까지 숫자만 입력가능합니다.">
+                        <div class="input-group-append">
+                        </div>
+                    </div>
+                    <label id="lUclass" style="color: red;" hidden>반을 입력하세요.</label>
                 </div>
                 <div class="mb-3">
                     <div class="input-group">
@@ -60,29 +80,12 @@
                         <div class="input-group-append">
                         </div>
                     </div>
-                    <label id="lUnumber"></label>
-                </div>
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="text" name="id" id="uid" class="form-control" placeholder="아이디" pattern=".{6,12}" title="6에서 12자리까지만 입력하세요.">
-                        <div class="input-group-append">
-                        </div>
-                    </div>
-                    <label id="lUid"></label>
-                </div>
-
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="password" name="pw" id="upw" class="form-control" placeholder="비밀번호">
-                        <div class="input-group-append">
-                        </div>
-                    </div>
-                    <label id="lUpw"></label>
+                    <label id="lUnumber" style="color: red;" hidden>번호을 입력하세요.</label>
                 </div>
 
                 <!-- /.col -->
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="">회원가입</button>
+                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="">아이디 찾기</button>
                 </div>
             </form>
 
@@ -92,7 +95,7 @@
                         <a href="/login" class="text-center">로그인</a>
                     </li>
                     <li style="float: left;">
-                        <a href="register.html" class="text-center">비밀번호 분실</a>
+                        <a href="/forgot_pw" class="text-center">비밀번호 분실</a>
                     </li>
                 </ul>
             </div>
