--- a/views/members/forgot_pw.html
+++ b/views/members/forgot_pw.html
@@ -25,7 +25,7 @@
 
 <body class="login-page">
 <div class="login-logo">
-    <b>아쿠팜</b>
+    <b>비밀번호 찾기</b>
 </div>
 <div class="login-box">
     <!-- /.login-logo -->
@@ -91,18 +91,9 @@
                     <label id="lUid" style="color: red;" hidden>아이디를 입력하세요.</label>
                 </div>
 
-                <div class="mb-3">
-                    <div class="input-group">
-                        <input type="password" name="pw" id="upw" class="form-control" placeholder="비밀번호">
-                        <div class="input-group-append">
-                        </div>
-                    </div>
-                    <label id="lUpw" style="color: red;" hidden>비밀번호를 입력하세요.</label>
-                </div>
-
                 <!-- /.col -->
                 <div class="mb-3" style="margin-top: 25px;">
-                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="">회원가입</button>
+                    <button type="submit" class="btn btn-success btn-block" id="reg" onclick="">비밀번호 찾기</button>
                 </div>
             </form>
 
@@ -114,9 +105,6 @@
                     <!-- <li style="float: left;">
                         <a href="/forgot_id" class="text-center">아이디 분실</a>
                     </li> -->
-                    <li style="float: left;">
-                        <a href="/forgot_pw" class="text-center">비밀번호 분실</a>
-                    </li>
                 </ul>
             </div>
         </div>
