--- a/views/members/login.html
+++ b/views/members/login.html
@@ -50,8 +50,11 @@
                     <li style="float: left;">
                         <a href="/register" class="text-center">회원가입</a>
                     </li>
+                    <!-- <li style="float: left;">
+                        <a href="/forgot_id" class="text-center">아이디 분실</a>
+                    </li> -->
                     <li style="float: left;">
-                        <a href="register.html" class="text-center">비밀번호 분실</a>
+                        <a href="/forgot_pw" class="text-center">비밀번호 분실</a>
                     </li>
                 </ul>
             </div>
