--- a/public/style/member.css
+++ b/public/style/member.css
@@ -58,3 +58,11 @@ li:nth-child(2)::before {
     margin: 4px 10px;
     background-color: rgba(0, 0, 0, .08);
 }
+li:nth-child(3)::before {
+    content: "";
+    float: left;
+    width: 1px;
+    height: 10px;
+    margin: 4px 10px;
+    background-color: rgba(0, 0, 0, .08);
+}
