--- a/public/style/vertical_slider.css
+++ b/public/style/vertical_slider.css
@@ -1,50 +1,21 @@
-body {
+/* body {
   min-height: 100vh;
   margin: 0 auto;
   background-color: #05051a;
   display: grid;
   grid-template-columns: 1fr 1fr;
   place-items: center;
-}
-
-.wrapper {
-  position: relative;
-  height: 25rem;
-}
-/* .wrapper::before, .wrapper::after {
-  display: block;
-  position: absolute;
-  z-index: 99;
-  color: #fff;
-  width: 100%;
-  text-align: center;
-  font-size: 1.5rem;
-  line-height: 1;
-  padding: 0.75rem 0;
-  pointer-events: none;
-}
-.wrapper::before {
-  content: "+";
-}
-.wrapper::after {
-  content: "−";
-  bottom: 0;
 } */
 
 input[type=range] {
   -webkit-appearance: none;
-  background-color: rgba(255, 255, 255, 0.2);
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin: 0;
-  padding: 0;
-  width: 20rem;
-  height: 3.5rem;
-  transform: translate(-50%, -50%) rotate(-90deg);
+  background-color: rgb(148, 51, 51);
+  width: 100%;
+  height: 2.5rem;
+  /* transform: translate(-50%, -50%) rotate(-90deg); */
   border-radius: 1rem;
   overflow: hidden;
-  cursor: row-resize;
+  /* cursor: pointer; */
 }
 input[type=range][step] {
   background-color: transparent;
@@ -53,7 +24,7 @@ input[type=range][step] {
 input[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
   width: 0;
-  box-shadow: -20rem 0 0 20rem rgba(255, 255, 255, 0.2);
+  box-shadow: -50rem 0 0 50rem rgba(255, 255, 255, 0.2);
 }
 input[type=range]::-moz-range-thumb {
   border: none;
