--- a/views/index.html
+++ b/views/index.html
@@ -17,8 +17,6 @@
 <body id="body-pd">
     <header class="header" id="header">
         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
-
-
             <nav class="navbar navbar-expand navbar-collapse navbar-light bg-light">
                 <!-- <ul class="navbar-nav">
                     <li class="nav-item">
@@ -102,7 +100,12 @@
     <div class="height-100 bg-light">
         <h4>Main Components</h4>
         <div class="wrapper">
-            <input type="range" min="0" max="100" value="50" disabled/>
+            <div class="card">
+                <div class="card-body">
+                    <input type="range" min="0" max="100"/>
+                </div>
+
+            </div>
         </div>
     </div>
 
