--- a/public/style/vertical_slider.css
+++ b/public/style/vertical_slider.css
@@ -1,12 +1,3 @@
-/* body {
-  min-height: 100vh;
-  margin: 0 auto;
-  background-color: #05051a;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  place-items: center;
-} */
-
 input[type=range] {
   -webkit-appearance: none;
   background-color: rgb(148, 51, 51);
@@ -15,7 +6,7 @@ input[type=range] {
   /* transform: translate(-50%, -50%) rotate(-90deg); */
   border-radius: 1rem;
   overflow: hidden;
-  /* cursor: pointer; */
+  cursor: pointer;
 }
 input[type=range][step] {
   background-color: transparent;
