--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,8 +1,11 @@
-body {
-  padding: 50px;
-  font: 1px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
-
-a {
-  color: #00B7FF;
+.usericon {
+  border-radius: 50%; 
+  background-color: ivory; 
+  width: 40px;
+  height: 40px; 
+  display: flex;
+  justify-content: 
+  center;align-items: 
+  center;font-weight: bold;
+  font-size: 21px;
 }
