--- a/views/index.html
+++ b/views/index.html
@@ -10,83 +10,59 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style/sidebar.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="style/vertical_slider.css">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 
 <body id="body-pd">
     <header class="header" id="header">
         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
-            <nav class="navbar navbar-expand navbar-collapse navbar-light bg-light">
-                <!-- <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Home</a>
+            <nav class="navbar navbar-expand navbar-light" style="flex-grow: 2;">
+                <ul class="navbar-nav">
+                    <a href="/"><img src="imgs/aqufarm.png" style="height: 40px; padding: 0.5rem; margin-left: 0.5rem;"></a>
+                </ul>
+            </nav>
+            <nav class="navbar navbar-expand navbar-light bg-light">
+                <ui class="navbar-nav" style="margin-left: auto !important;">
+                    <li class="navbar-text" style="padding: 0.5rem;">
+                        <span id="level"></span>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            Dropdown link
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <!-- <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
+                        <span id="username" style="height: 28px;">홍길동</span>
+                    </li> -->
+                    <li class="navbar-text usericon" style="color: black; padding: 0.5rem;">
+                        <a id="username" data-bs-toggle="dropdown" role="button" href="#" style="height: 28px;"></a>
+                        <ul class="dropdown-menu" aria-labelledby="username" style="min-width: min-content; z-index: 1;">
+                            <li><a class="dropdown-item" href="#">로그아웃</a></li>
+                            <li><a class="dropdown-item" href="#">정보수정</a></li>
+                            <li><a class="dropdown-item" href="#">기기정보</a></li>
                         </ul>
                     </li>
-                </ul> -->
-                <!-- <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form> -->
-                <a href="/" class="nav-link"><img src="imgs/aqufarm.png" style="height: 45px; padding: 0.5rem; margin-left: 0.5rem;"></a>
-                <ui class="navbar-nav" style="margin-left: auto;">
-                    <li class="navbar-text" style="padding: 0.5rem;">
-                        <span id="level">학생용</span>
-                    </li>
-                    <li class="navbar-text" style="color: black; padding: 0.5rem;">
-                        <span class="" id="username">홍길동</span>
-                    </li>
-                    <!-- <li class="nav-link">
-                        <a href="#" onclick="javascript:logout()" style="color: rgba(var(--bs-emphasis-color-rgb), 0.65);"> <i class='bx bx-log-out nav_icon'></i></a>
-                    </li> -->
                 </ui>
             </nav>
     </header>
     <div class="l-navbar" id="nav-bar">
         <nav class="nav">
             <div>
-                <a href="#" class="nav_logo" style="padding-left: 22px;">
+                <a href="/" class="nav_logo" style="padding-left: 22px;">
                     <i ><img src="imgs/am_h20.png" width="24px;"></i>
                     <span class="fas-3 bi_house" style="color: aliceblue;">아쿠팜</span>
                 </a>
                 <div class="nav_list">
                     <a href="#" class="nav_link active">
                         <i class='bx bx-grid-alt nav_icon'></i>
-                        <span class="nav_name">Dashboard</span>
-                    </a>
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-user nav_icon'></i> <span class="nav_name">Users</span>
-                    </a>
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-message-square-detail nav_icon'></i>
-                        <span class="nav_name">Messages</span>
-                    </a>
-                    <a href="#" class="nav_link">
-                        <i class='bx bx-bookmark nav_icon'></i>
-                        <span class="nav_name">Bookmark</span>
-                    </a>
-                    <a href="#" class="nav_link"> <i class='bx bx-folder nav_icon'></i>
-                        <span class="nav_name">Files</span>
+                        <span class="nav_name">대시보드</span>
                     </a>
                     <a href="#" class="nav_link">
                         <i class='bx bx-bar-chart-alt-2 nav_icon'></i>
-                        <span class="nav_name">Stats</span>
+                        <span class="nav_name">차트</span>
+                    </a>
+                    <a href="#" class="nav_link">
+                        <i class='bx bx-user nav_icon'></i> <span class="nav_name">학생관리</span>
+                    </a>
+                    <a href="#" class="nav_link">
+                        <i class='bx bx-cog nav_icon'></i>
+                        <span class="nav_name">설정</span>
                     </a>
                 </div>
             </div>
@@ -97,14 +73,13 @@
         </nav>
     </div>
 
-    <div class="height-100 bg-light">
-        <h4>Main Components</h4>
+    <div class="height-100 bg-light" style="padding: 1rem;">
+        <h4>기기 선택</h4>
         <div class="wrapper">
             <div class="card">
+                <div class="card-header">기기 이름</div>
                 <div class="card-body">
-                    <input type="range" min="0" max="100"/>
                 </div>
-
             </div>
         </div>
     </div>
@@ -117,6 +92,8 @@
         <script src="https://kit.fontawesome.com/57c8b4e229.js"></script> -->
     <script src="js/sidebar.js"></script>
     <script>
+        const level = ['학생용', '교사용', '관리자']
+
         function logout() {
             var f = document.createElement('form');
             f.setAttribute('method', 'post');
@@ -135,6 +112,8 @@
                     location.replace('/login');
                 }
                 else {
+                    $("#level").text(level[data[0].level]);
+                    $("#username").text(data[0].name.slice(0, 1));
                     console.log(data)
                 }
             }
